Various fixes, docker style recommendations
- use nproc instead of fixed build parallelism
- use full database path in sentinel configs
- no longer setguid cron
- use AIO's scripts in vivod too
- include masternode.conf in checkdat so it is syncronized to volume

--- a/sentinel/Dockerfile
+++ b/sentinel/Dockerfile
@@ -1,8 +1,13 @@
 FROM alpine:latest as build
 WORKDIR /root/build
 RUN apk update && \
-	apk add git py2-pip && \
-	pip install inflection==0.3.1 peewee==2.8.3 python-bitcoinrpc==1.0 && \
+	apk add \
+		git \
+		py2-pip && \
+	pip install \
+		inflection==0.3.1 \
+		peewee==2.8.3 \
+		python-bitcoinrpc==1.0 && \
 	git clone https://github.com/hunbalazs/sentinel && \
 	cd sentinel && \
 	rm -rf \
@@ -22,19 +27,21 @@ RUN apk update && \
 
 FROM alpine:latest as assemble
 RUN apk update && \
-	apk --no-cache add py2-py py2-simplejson && \
+	apk --no-cache add \
+		py2-py \
+		py2-simplejson && \
 	adduser -s /bin/false -D vivo
 WORKDIR /opt/wallet/vivo/sentinel
 COPY --from=build /root/build/sentinel ./
 COPY --from=build \
-		/usr/lib/python2.7/site-packages/inflection.pyc \
-		/usr/lib/python2.7/site-packages/peewee.pyc \
+	/usr/lib/python2.7/site-packages/inflection.pyc \
+	/usr/lib/python2.7/site-packages/peewee.pyc \
 	/usr/lib/python2.7/site-packages/
 COPY --from=build \
-		/usr/lib/python2.7/site-packages/bitcoinrpc \
+	/usr/lib/python2.7/site-packages/bitcoinrpc \
 	/usr/lib/python2.7/site-packages/bitcoinrpc
 COPY --from=build \
-		/usr/lib/python2.7/site-packages/playhouse \
+	/usr/lib/python2.7/site-packages/playhouse \
 	/usr/lib/python2.7/site-packages/playhouse
 COPY crontab ./
 COPY init.sh bootstrap.sh ./
@@ -43,9 +50,6 @@ RUN chmod 755 init.sh bootstrap.sh && \
 
 FROM scratch
 COPY --from=assemble / /
-RUN chown vivo:vivo -R /home/vivo && \
-	rm /usr/bin/crontab && \
-	cp /bin/busybox /usr/bin/crontab && \
-	chmod +s /usr/bin/crontab
+RUN chown vivo:vivo -R /home/vivo
 ENV SECRET_OVERRIDE=0 VIVO_RPCUSER=vivo VIVO_RCPPASSWORD=vivo VIVO_HOSTNAME=vivod
 ENTRYPOINT [ "/opt/wallet/vivo/sentinel/init.sh" ]
